# agentforge-runner

./: .gitignore  .replit  package-lock.json  package.json  replit.md  vitest.config.ts
.github/workflows/: runner-build.yml
agentforge-runner/: README.md  SETUP.md  index.html  package.json  tailwind.config.js  vite.config.ts
agentforge-runner/src/: App.tsx  index.css
agentforge-runner/src-tauri/: Cargo.toml  tauri.conf.json
agentforge-runner/src-tauri/resources/python/: agent_runner.py
agentforge-runner/src-tauri/src/: main.rs
attached_assets/: Pasted-Additional-Feature-Ideas-for-AgentForge-Here-are-though_1769193489728.txt  Pasted-Complete-Runner-Code-Create-these-files-in-a-new-folder_1769240229347.txt  Pasted-Correct-Architecture--1769240687279_1769240687280.txt  Pasted-Directive-to-Give-Your-Devs-Copy-Paste-Ready-Team-we-ne_1769236126040.txt  Pasted-Enhanced-Deployment-Usage-Features-for-AgentForge-To-ad_1769194157432.txt  Pasted-Here-s-the-detailed-look-and-feel-how-it-should-work-re_1769233556145.txt  Pasted-How-to-Do-It-Best-Tools-in-2026-Use-one-of-these-from-c_1769236366430.txt  Pasted-Native-Desktop-App-Implementation-Plan-This-is-absolute_1769238673712.txt  Pasted-Priority-Improvements-Next-Phase-Plan-Focus-on-closing-_1769194961074.txt  Pasted-Recommended-Solution-Use-Tauri-Runner-as-the-Primary-De_1769233088121.txt  Pasted-The-issue-you-re-facing-with-xAI-in-your-Replit-setup-l_1769206103044.txt  Pasted-The-web-agent-in-AgentForge-specifically-the-Run-in-Bro_1769234349500.txt  Pasted-To-achieve-the-small-floating-avatar-window-with-a-comm_1769231311026.txt  Pasted-Vision-Create-a-clean-minimalist-Apple-com-inspired-web_1769192522307.txt  Pasted-What-Needs-to-Happen-In-Order-Step-1-Build-the-Runner-A_1769239983137.txt  Pasted-Yes-this-is-a-solid-user-friendly-compromise-that-keeps_1769232374638.txt  Pasted-agentforge-runner-src-tauri-Cargo-toml-tauri-conf-json-_1769238977510.txt  Pasted-es-you-re-absolutely-right-for-the-desktop-experience-t_1769235447317.txt  Pasted-he-current-setup-Python-based-download-with-manual-inst_1769238021659.txt
client/: index.html
client/src/: App.tsx  index.css
runner/: README.md  index.html  package-lock.json  package.json
runner/src/: App.tsx  index.css
runner/src-tauri/: Cargo.toml  tauri.conf.json
runner/src-tauri/capabilities/: default.json
runner/src-tauri/resources/python/: agent_server.py
runner/src-tauri/src/: credentials.rs  database.rs  main.rs  scheduler.rs  tasks.rs  triggers.rs
server/: db.ts  routes.ts  storage.ts
server/enterprise/: index.ts  organization.ts
server/knowledge/: index.ts  knowledge-base.ts
server/multi-agent/: coordinator.ts  (+1 more)
shared/: schema.ts
(+111 files in other folders)
