[package]
name = "agentforge-runner"
version = "1.0.0"
description = "Native desktop app for running AgentForge agents"
authors = ["AgentForge"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
ureq = "2.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
